<resources>
    <string name="app_name">MyBooks</string>
    <!-- Login Screen -->
    <string name="btn_start">START</string>

    <!-- Main List screen -->
    <string name="list_top_title">My Book List</string>
    <string name="no_book_list">It is an empty.</string>

    <!-- Editor Screen -->
    <!-- Label for editor menu option to save a book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- menu icon at the book overview -->
    <string name="action_edit">Edit</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <!-- create a new book -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- edit the book -->
    <string name="editor_activity_title_edit_book">Edit the Book</string>

    <string name="book_detail">Book Overview</string>

    <!-- Text for book title field in the editor [CHAR LIMIT=30] -->
    <string name="category_book_title">Book Title</string>

    <!-- Text for author name in the editor [CHAR LIMIT=30] -->
    <string name="category_author_name">Author Name</string>

    <!-- Label for genre information in the editor [CHAR LIMIT=30] -->
    <string name="category_genre">Genre</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price($)</string>

    <!-- Label for supplier name information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier Name</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_phone">Supplier Phone</string>

    <!-- Text hint for book title field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for author in the editor [CHAR LIMIT=30] -->
    <string name="hint_author_name">Author</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Label hint for price information in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Label hint for supplier name information in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Label hint for supplier phone information in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone</string>

    <!-- Units for price of a book ($) [CHAR LIMIT=5] -->
    <string name="unit_price">$</string>

    <string name= "action_insert_dummy_data">Insert Dummy Data</string>
    <string name= "action_delete_all_entries">Delete all data</string>

    <!-- extra -->
    <string name="callingAct">callingActivity</string>
    <string name="MainList">MainList</string>
    <string name="BookDetail">BookDetail</string>
    <string name="bookRowId">bookRowId</string>

    <!-- Types of Genre -->
    <string name="genre_novel">Novel</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_historical_fiction">Historical Fiction</string>
    <string name="genre_non_fiction">Non-fiction</string>
    <string name="genre_romance">Romance</string>

    <!-- information texts -->
    <string name="saving_success">The book saved with row id: </string>
    <string name="n_a">N/A</string>
    <string name="editor_insert_book_successful">The book is successfully saved.</string>
    <string name="delete_all_successfully">All books are successfully deleted.</string>
    <string name="sell_one_book">1 Book was sold!</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Warning Texts -->
    <string name="not_decided">Not decided</string>
    <string name="error_saving">Error with saving a book</string>
    <string name="error_fetching">Can not find the information about the chosen book.</string>
    <string name="no_title">No Title</string>
    <string name="no_author">No Author Name</string>
    <string name="no_quantity">No Quantity</string>
    <string name="no_price">No Price</string>
    <string name="no_supplier_name">No Supplier Name</string>
    <string name="no_supplier_phone">No Supplier Phone Number</string>
    <string name="no_enough_phone_length">Not enough phone number length</string>
    <string name="not_supported">Insertion is not supported for </string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="no_more_book">This book is out of stock.</string>
    <string name="no_negative">You cannot go down under 0.</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard the changes?</string>
    <string name="book_require_title">A book requires a name.</string>
    <string name="book_require_authorname">A book requires an author name.</string>
    <string name="book_require_genre">A book requires a genre type.</string>
    <string name="book_require_supplier">A book requires a supplier name.</string>
    <string name="fail_insertion_for">Failed to insert row for </string>
    <string name="deletion_not_supported_for">Deletion is no supported for </string>
    <string name="update_not_supported_for">Update is not supported for </string>
    <string name="unknown_uri">Unknown URI </string>
    <string name="with_match"> with match </string>
    <string name="delete_all_fail">Fail to delete all books.</string>
    <string name="no_internet_available">No Intent available to handle action</string>

</resources>
